--- a/lab3/lab3.vcxproj.filters
+++ b/lab3/lab3.vcxproj.filters
@@ -32,5 +32,8 @@
     <ClInclude Include="Interface.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
+    <ClInclude Include="algo.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
