--- a/lab3/lab3.vcxproj
+++ b/lab3/lab3.vcxproj
@@ -120,6 +120,7 @@
     <ClCompile Include="UserStructs.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="algo.h" />
     <ClInclude Include="Array.h" />
     <ClInclude Include="Interface.h" />
   </ItemGroup>
