--- a/lab3/lab3.vcxproj.filters
+++ b/lab3/lab3.vcxproj.filters
@@ -24,6 +24,12 @@
     <ClCompile Include="UserStructs.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="View.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClCompile>
+    <ClCompile Include="View.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Array.h">
